--- a/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <div id="menubalk" class="systeembeheerder">
         <ul id="menuItems">
-            <a href=""><li>Beheren Bedrijf</li></a>
+            <a href='@Url ("Index", "Bedrijf")'><li>Beheren Bedrijf</li></a>
             <a href=""><li>Beheren Stagiair</li></a>
             <a href=""><li>Beheren Stagedocent</li></a>
             <a href=""><li>Beheren Stagebegeleider</li></a>
