--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -29,7 +29,7 @@
             @Html.DisplayFor(modelItem => item.Naam)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Actief)
+            @Html.EditorFor(modelItem => item.Actief)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NonActiefReden)
