--- a/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
@@ -10,15 +10,7 @@
 </head>
 <body>
     <div id="menubalk" class="systeembeheerder">
-        <ul id="menuItems">
-            <a href='@Url.Action("Index", "Home")'><li>Home</li></a>
-            <a href='@Url.Action("Index", "Bedrijf")'><li>Beheren Bedrijf</li></a>
-            <a href='@Url.Action("Index", "Stagiair")'><li>Beheren Stagiair</li></a>
-            <a href='@Url.Action("Index", "Docent")'><li>Beheren Stagedocent</li></a>
-            <a href='@Url.Action("Index", "Begeleider")'><li>Beheren Stagebegeleider</li></a>
-            <a href='@Url.Action("Index", "Periode")'><li>Beheren Stageperiode</li></a>
-            <a href='@Url.Action("Index", "Koppeling")'><li>Beheren Koppelingen</li></a>
-        </ul>
+        @Html.Partial("~/Views/Shared/_Menu.cshtml")
     </div>
     <div id="subMenuLinks"></div>
     @RenderBody()
