--- a/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Create.cshtml
@@ -20,6 +20,11 @@
 @{
     ViewBag.Title = "Create";
 }
+    @section zijMenu{
+        <ul>
+            <li>@Html.ActionLink("Terug", "Index")</li>
+        </ul>
+    }
 
 <h2>Create</h2>
 
