--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -26,7 +26,13 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+@section zijMenu{
+    <ul>
+        <li>
+            @Html.ActionLink("Back to List", "Index")
+        </li>
+    </ul>
+}
 <h2>Edit</h2>
 
 @using (Html.BeginForm()) {
@@ -68,9 +74,6 @@
     </fieldset>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
