--- a/PVB Stage Applicatie/Views/Docent/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Index.cshtml
@@ -3,7 +3,12 @@
 @{
     ViewBag.Title = "Index";
 }
-
+@section zijMenu{
+    <ul>
+        <li>@Html.ActionLink("Nieuwe docent", "Create")</li>
+        <li>@Html.ActionLink("Bulk invoer", "")</li>
+    </ul>
+}
 <h2>Index</h2>
 
 <p>
