--- a/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Layout.cshtml
@@ -9,12 +9,18 @@
     @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
-    <div id="menubalk" class="systeembeheerder">
-        @Html.Partial("~/Views/Shared/_Menu.cshtml")
+    <div id="bovenbalk">
+        <img src="~/Images/logo.png" />
+        <div id="menubalk">
+            @Html.Partial("~/Views/Shared/_Menu.cshtml")
+        </div>
     </div>
-    <div id="subMenuLinks"></div>
-    @RenderBody()
-
+    <div id="subMenuLinks">
+        @RenderSection("zijMenu", false)
+    </div>
+    <div id="content">
+        @RenderBody()
+    </div>
 
     @RenderSection("scripts", required: false)
 </body>
