Loginpagina deel gemaakt van layout

--- a/PVB Stage Applicatie/Views/Login/index.cshtml
+++ b/PVB Stage Applicatie/Views/Login/index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model PVB_Stage_Applicatie.Models.LoginForm
-
 @{
+    ViewBag.Title = "Login";
+}
+@*@{
     Layout = null;
 }
+
 
 <!DOCTYPE html>
 
@@ -14,7 +17,7 @@
 <body>
     <script src="~/Scripts/jquery-1.8.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
     
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
@@ -45,8 +48,8 @@
         </fieldset>
     }
     
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
-</body>
-</html>
+    </div>*@
+@*</body>
+</html>*@
