--- a/PVB Stage Applicatie/Views/Koppeling/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Create.cshtml
@@ -20,7 +20,7 @@
         <legend>Stage</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Student, "Persoonsgegevens")
+            @Html.LabelFor(model => model.Student, "Student")
         </div>
         <div class="editor-field">
             @Html.DropDownList("Student", String.Empty)
@@ -28,7 +28,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Stagedocent, "Persoonsgegevens1")
+            @Html.LabelFor(model => model.Stagedocent, "Stagedocent")
         </div>
         <div class="editor-field">
             @Html.DropDownList("Stagedocent", String.Empty)
@@ -44,7 +44,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Stagebegeleider, "Persoonsgegevens2")
+            @Html.LabelFor(model => model.Stagebegeleider, "Stagebegeleider")
         </div>
         <div class="editor-field">
             @Html.DropDownList("Stagebegeleider", String.Empty)
