--- a/PVB Stage Applicatie/Views/Periode/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Create.cshtml
@@ -1,4 +1,9 @@
 ﻿@model PVB_Stage_Applicatie.Models.Periode
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".calendar").datepicker();
+    });
+</script>
 
 @{
     ViewBag.Title = "Create";
@@ -12,17 +17,9 @@
 
     <fieldset>
         <legend>Periode</legend>
-
         <div class="editor-label">
-            @Html.LabelFor(model => model.Periode1)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Periode1)
-            @Html.ValidationMessageFor(model => model.Periode1)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Begindatum)
+            Begindatum
+            ("MM-DD-YYYY")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Begindatum)
@@ -30,7 +27,8 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Einddatum)
+            Einddatum
+            ("MM-DD-YYYY")
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Einddatum)
