--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -12,7 +12,7 @@
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Periode1)
+            Periode
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Begindatum)
