--- a/PVB Stage Applicatie/Views/Docent/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Edit.cshtml
@@ -1,12 +1,40 @@
 ﻿@model PVB_Stage_Applicatie.Models.Persoonsgegevens
+@section zijMenu{
+    <ul>
+        <li>
+            @Html.ActionLink("Terug", "Index")
+        </li>
+    </ul>
+}
+<script>
+    $(document).ready(function () {
+        if ($("#Actief")[0].checked) {
+            $("#NonActiefReden")[0].disabled = true;
+        }
+        else {
+            $("#NonActiefReden")[0].disabled = false;
+        }
+    });
 
+    $("#Actief").live("click", function () {
+        if ($("#Actief")[0].checked) {
+            debugger;
+            $("#NonActiefReden")[0].disabled = true;
+            $("#NonActiefReden")[0].value = "";
+        }
+        else {
+            $("#NonActiefReden")[0].disabled = false;
+        }
+    });
+</script>
 @{
     ViewBag.Title = "Edit";
 }
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -14,37 +42,29 @@
         <legend>Persoonsgegevens</legend>
 
         @Html.HiddenFor(model => model.PersoonsgegevensID)
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Rol)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Rol)
-            @Html.ValidationMessageFor(model => model.Rol)
-        </div>
+        @Html.HiddenFor(model => model.Voornaam)
+        @Html.HiddenFor(model => model.Achternaam)
+        @Html.HiddenFor(model => model.Tussenvoegsel)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Voornaam)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Voornaam)
-            @Html.ValidationMessageFor(model => model.Voornaam)
+            @Html.DisplayFor(model => model.Voornaam)
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Achternaam)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Achternaam)
-            @Html.ValidationMessageFor(model => model.Achternaam)
+            @Html.DisplayFor(model => model.Achternaam)
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Tussenvoegsel)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Tussenvoegsel)
-            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
+            @Html.DisplayFor(model => model.Tussenvoegsel)
         </div>
 
         <div class="editor-label">
@@ -115,51 +135,16 @@
             @Html.LabelFor(model => model.MedewerkerID)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.MedewerkerID)
+            @Html.DisplayFor(model => model.MedewerkerID)
             @Html.ValidationMessageFor(model => model.MedewerkerID)
         </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.StudentNummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.StudentNummer)
-            @Html.ValidationMessageFor(model => model.StudentNummer)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleiding)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleiding)
-            @Html.ValidationMessageFor(model => model.Opleiding)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleidingsniveau)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleidingsniveau)
-            @Html.ValidationMessageFor(model => model.Opleidingsniveau)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Bedrijf", String.Empty)
-            @Html.ValidationMessageFor(model => model.Bedrijf)
-        </div>
-
         <p>
             <input type="submit" value="Save" />
         </p>
     </fieldset>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
