--- a/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Index.cshtml
@@ -11,58 +11,16 @@
         <li>@Html.ActionLink("Bulk invoer", "")</li>
     </ul>
 }
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Rol)
-        </th>
-        <th>
+         <th>
             @Html.DisplayNameFor(model => model.Voornaam)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Achternaam)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Tussenvoegsel)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Straat)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Huisnummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Toevoeging)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Postcode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Plaats)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Actief)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NonActiefReden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MedewerkerID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentNummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Opleiding)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Opleidingsniveau)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
@@ -73,61 +31,22 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Rol)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Voornaam)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Achternaam)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tussenvoegsel)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Straat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Huisnummer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Toevoeging)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Postcode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Plaats)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.Actief)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NonActiefReden)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MedewerkerID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentNummer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Opleiding)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Opleidingsniveau)
-        </td>
+        </td>       
         <td>
             @Html.DisplayFor(modelItem => item.Bedrijf1.Naam)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.PersoonsgegevensID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PersoonsgegevensID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PersoonsgegevensID })
-        </td>
+            @Html.ActionLink("Details", "Details", new { id=item.PersoonsgegevensID }) 
+        </td>   
     </tr>
 }
 
