--- a/PVB Stage Applicatie/Views/Docent/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Create.cshtml
@@ -19,15 +19,7 @@
     <fieldset>
         <legend>Persoonsgegevens</legend>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Rol)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Rol)
-            @Html.ValidationMessageFor(model => model.Rol)
-        </div>
-
-        <div class="editor-label">
+               <div class="editor-label">
             @Html.LabelFor(model => model.Voornaam)
         </div>
         <div class="editor-field">
@@ -99,22 +91,7 @@
             @Html.ValidationMessageFor(model => model.Plaats)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Actief)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Actief)
-            @Html.ValidationMessageFor(model => model.Actief)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.NonActiefReden)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.NonActiefReden)
-            @Html.ValidationMessageFor(model => model.NonActiefReden)
-        </div>
-
+       
         <div class="editor-label">
             @Html.LabelFor(model => model.MedewerkerID)
         </div>
@@ -122,41 +99,8 @@
             @Html.EditorFor(model => model.MedewerkerID)
             @Html.ValidationMessageFor(model => model.MedewerkerID)
         </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.StudentNummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.StudentNummer)
-            @Html.ValidationMessageFor(model => model.StudentNummer)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleiding)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleiding)
-            @Html.ValidationMessageFor(model => model.Opleiding)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Opleidingsniveau)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Opleidingsniveau)
-            @Html.ValidationMessageFor(model => model.Opleidingsniveau)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Bedrijf", String.Empty)
-            @Html.ValidationMessageFor(model => model.Bedrijf)
-        </div>
-
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Toevoegen" />
         </p>
     </fieldset>
 }
