--- a/PVB Stage Applicatie/Views/Docent/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Index.cshtml
@@ -11,13 +11,10 @@
 }
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Rol)
+            Medewerker ID
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Voornaam)
@@ -25,110 +22,40 @@
         <th>
             @Html.DisplayNameFor(model => model.Achternaam)
         </th>
+
         <th>
-            @Html.DisplayNameFor(model => model.Tussenvoegsel)
+            Actief
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Straat)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Huisnummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Toevoeging)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Postcode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Plaats)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Actief)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NonActiefReden)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MedewerkerID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentNummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Opleiding)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Opleidingsniveau)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
+            Non-actief Reden
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rol)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Voornaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Achternaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tussenvoegsel)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Straat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Huisnummer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Toevoeging)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Postcode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Plaats)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Actief)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NonActiefReden)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MedewerkerID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentNummer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Opleiding)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Opleidingsniveau)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bedrijf1.Naam)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PersoonsgegevensID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PersoonsgegevensID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PersoonsgegevensID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.ActionLink("" + item.MedewerkerID, "Details", new { id = item.PersoonsgegevensID })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Voornaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Achternaam)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Actief)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NonActiefReden)
+            </td>
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.PersoonsgegevensID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.PersoonsgegevensID }) 
+            </td>
+        </tr>
+    }
 
 </table>
