--- a/PVB Stage Applicatie/Views/Periode/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Edit.cshtml
@@ -1,5 +1,33 @@
 ﻿@model PVB_Stage_Applicatie.Models.Periode
-
+@section zijMenu{
+    <ul>
+        <li>
+            @Html.ActionLink("Back to List", "Index")
+        </li>
+    </ul>
+}
+<script type="text/javascript">
+    $(function () {
+        $(".begin").datepicker({
+            defaultDate: "+1w",
+            changeMonth: true,
+            numberOfMonths: 1,
+            dateFormat: "mm-dd-yy",
+            onClose: function (selectedDate) {
+                $(".eind").datepicker("option", "minDate", selectedDate);
+            }
+        });
+        $(".eind").datepicker({
+            defaultDate: "+1w",
+            changeMonth: true,
+            numberOfMonths: 1,
+            dateFormat: "mm-dd-yy",
+            onClose: function (selectedDate) {
+                $(".begin").datepicker("option", "maxDate", selectedDate);
+            }
+        });
+    });
+</script>
 @{
     ViewBag.Title = "Edit";
 }
@@ -12,28 +40,30 @@
 
     <fieldset>
         <legend>Periode</legend>
+        @Html.HiddenFor(model => model.Periode1)
+
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Periode1)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Periode1)
+            @Html.DisplayFor(model => model.Periode1)
             @Html.ValidationMessageFor(model => model.Periode1)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Begindatum)
+            Begindatum
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Begindatum)
+            @Html.TextBoxFor(model => model.Begindatum, new {@class = "kalender begin", @readonly = "true" })
             @Html.ValidationMessageFor(model => model.Begindatum)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Einddatum)
+            Einddatum
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Einddatum)
+            @Html.TextBoxFor(model => model.Einddatum, new { @class = "kalender eind", @readonly = "true" })
             @Html.ValidationMessageFor(model => model.Einddatum)
         </div>
 
@@ -42,11 +72,6 @@
         </p>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
