--- a/PVB Stage Applicatie/Views/Periode/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Periode/Index.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Index";
 }
 
+@section zijMenu{
+    <ul>
+        <li>@Html.ActionLink("Periode toevoegen", "Create")</li>
+    </ul>
+}
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table>
     <tr>
         <th>
@@ -26,7 +27,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Periode1)
+            @Html.ActionLink("" + item.Periode1, "Details", new { id = item.Periode1 })
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Begindatum)
@@ -35,9 +36,9 @@
             @Html.DisplayFor(modelItem => item.Einddatum)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new {  id=item.Periode1  }) |
+            @*@Html.ActionLink("Details", "Details", new { id = item.Periode1 }) |*@
+            @Html.ActionLink("Delete", "Delete", new { id=item.Periode1 })
         </td>
     </tr>
 }
