--- a/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
@@ -9,6 +9,7 @@
                    new { LinkText="Beheren Docent", ActionName="Index",ControllerName="Docent",Roles= Rollen.Beheerder},
                    new { LinkText="Beheren Periodes", ActionName="Index",ControllerName="Periode",Roles= Rollen.Beheerder},
                    new { LinkText="Beheren Koppelingen", ActionName="Index",ControllerName="Koppeling",Roles= Rollen.Beheerder},
+                   new { LinkText="Beheren Begeleiders", ActionName="Index",ControllerName="Begeleider",Roles= Rollen.Beheerder},
                    //Menu Docent
                    new { LinkText="Mijn Bedrijven", ActionName="Index",ControllerName="Bedrijf",Roles= Rollen.Docent },
                    //Algemeen
