--- a/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
@@ -42,6 +42,9 @@
         <legend>Persoonsgegevens</legend>
 
         @Html.HiddenFor(model => model.PersoonsgegevensID)
+        @Html.HiddenFor(model => model.Voornaam)
+        @Html.HiddenFor(model => model.Achternaam)
+        @Html.HiddenFor(model => model.Tussenvoegsel)
         @Html.HiddenFor(model => model.Rol)
 
 
