--- a/PVB Stage Applicatie/Views/Begeleider/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Details.cshtml
@@ -15,92 +15,103 @@
 
 <h2>Details</h2>
 
-<fieldset>
+<fieldset class="details-field">
     <legend>Persoonsgegevens</legend>
-
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Voornaam)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Voornaam)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Voornaam)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Voornaam)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Achternaam)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Achternaam)
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Achternaam)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Tussenvoegsel)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Tussenvoegsel)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Achternaam)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Email)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Email)
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Tussenvoegsel)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Straat)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Straat)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Tussenvoegsel)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Huisnummer)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Huisnummer)
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Email)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Toevoeging)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Toevoeging)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Postcode)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Postcode)
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Straat)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Plaats)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Plaats)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Straat)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Actief)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Actief)
+        </div>
     </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Huisnummer)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.NonActiefReden)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.NonActiefReden)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Huisnummer)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Toevoeging)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Toevoeging)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Postcode)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Postcode)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Plaats)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Plaats)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Actief)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Actief)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.NonActiefReden)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NonActiefReden)
-    </div>
-
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Bedrijf1.Naam)
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Bedrijf1.Naam)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Bedrijf1.Naam)
+        </div>
     </div>
 </fieldset>
 
