--- a/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
@@ -6,38 +6,93 @@
 
 <h2>Details</h2>
 
-<fieldset>
-    <legend>Stage</legend>
+<fieldset class="stage-field">
+    <legend>Stagiair</legend>
+    <div class="display-row">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Persoonsgegevens.Voornaam)
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens.Voornaam): 
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens.Voornaam)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Persoonsgegevens.Voornaam)
-    </div>
+    <div class="display-row">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Persoonsgegevens1.Voornaam)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Persoonsgegevens1.Voornaam)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Periode.Periode1)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Periode.Periode1)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Persoonsgegevens2.Voornaam)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Persoonsgegevens2.Voornaam)
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens.Achternaam):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens.Achternaam)
+        </div>
     </div>
 </fieldset>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.StageID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<fieldset class="stage-field">
+    <legend>Docent</legend>
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens1.Voornaam):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens1.Voornaam)
+        </div>
+    </div>
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens1.Achternaam):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens1.Achternaam)
+        </div>
+    </div>
+</fieldset>
+<fieldset class="stage-field">
+    <legend>Begeleider</legend>
+
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens2.Voornaam):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens2.Voornaam)
+        </div>
+    </div>
+
+    <div class="display-row">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Persoonsgegevens2.Achternaam):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Persoonsgegevens2.Achternaam)
+        </div>
+    </div>
+
+</fieldset>
+<fieldset class="stage-field">
+    <legend>Periode</legend>
+    <div class="display-row">
+        <div class="display-label">
+            Begindatum:
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Periode.Begindatum)
+        </div>
+    </div>
+    <div class="display-row">
+        <div class="display-label">
+            Einddatum:
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Periode.Einddatum)
+        </div>
+    </div>
+
+</fieldset>
+
+
+@section zijMenu{
+    <ul>
+        <li>@Html.ActionLink("Edit", "Edit", new { id = Model.StageID })</li>
+        <li>@Html.ActionLink("Terug", "Index")</li>
+    </ul>}
