--- a/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
+++ b/PVB Stage Applicatie/Views/Shared/_Menu.cshtml
@@ -2,18 +2,18 @@
 @{
     var menus = new[]
                 {
-                   new { LinkText="Home", ActionName="Index",ControllerName="Home",Roles= Rollen.Beheerder + "," + Rollen.Docent},
+                   new { LinkText="Home", ActionName="Index",ControllerName="Home",Roles= "Beheerder" + "," + "Docent"},
                     //Menu Beheerder                   
-                   new { LinkText="Beheren Bedrijf", ActionName="Index",ControllerName="Bedrijf",Roles= Rollen.Beheerder},
-                   new { LinkText="Beheren Stagiair", ActionName="Index",ControllerName="Stagiair",Roles= Rollen.Beheerder},                 
-                   new { LinkText="Beheren Docent", ActionName="Index",ControllerName="Docent",Roles= Rollen.Beheerder},
-                   new { LinkText="Beheren Periodes", ActionName="Index",ControllerName="Periode",Roles= Rollen.Beheerder},
-                   new { LinkText="Beheren Koppelingen", ActionName="Index",ControllerName="Koppeling",Roles= Rollen.Beheerder},
-                   new { LinkText="Beheren Begeleiders", ActionName="Index",ControllerName="Begeleider",Roles= Rollen.Beheerder},
+                   new { LinkText="Beheren Bedrijf", ActionName="Index",ControllerName="Bedrijf",Roles= "Beheerder"},
+                   new { LinkText="Beheren Stagiair", ActionName="Index",ControllerName="Stagiair",Roles= "Beheerder"},                 
+                   new { LinkText="Beheren Docent", ActionName="Index",ControllerName="Docent",Roles= "Beheerder"},
+                   new { LinkText="Beheren Periodes", ActionName="Index",ControllerName="Periode",Roles= "Beheerder"},
+                   new { LinkText="Beheren Koppelingen", ActionName="Index",ControllerName="Koppeling",Roles= "Beheerder"},
+                   new { LinkText="Beheren Begeleiders", ActionName="Index",ControllerName="Begeleider",Roles= "Beheerder"},
                    //Menu Docent
-                   new { LinkText="Mijn Bedrijven", ActionName="Index",ControllerName="Bedrijf",Roles= Rollen.Docent },
+                   new { LinkText="Mijn Bedrijven", ActionName="Index",ControllerName="Bedrijf",Roles= "Docent" },
                    //Algemeen
-                   new { LinkText="Uitloggen", ActionName="logUit",ControllerName="Login",Roles= Rollen.Beheerder+ ","+ Rollen.Docent },
+                   new { LinkText="Uitloggen", ActionName="logUit",ControllerName="Login",Roles= "Beheerder"+ ","+ "Docent" },
                    new { LinkText="Inloggen", ActionName="Index",ControllerName="Login",Roles= "Anonymous"}
                 };
 } 
