Beoordeling navigatie gemaakt

--- a/PVB Stage Applicatie/Views/Beoordeling/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Beoordeling/Index.cshtml
@@ -7,9 +7,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Selecteer")
 </p>
-<table>
+
+@*<table>
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Stage1.StageID)
@@ -336,4 +337,4 @@
     </tr>
 }
 
-</table>
+</table>*@
